--- a/index-START.html
+++ b/index-START.html
@@ -58,7 +58,30 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  window.addEventListener('keydown',  playSound);
 
+  function playSound(e){
+    let audio=document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    //console.log(audio);
+    if (!audio){return} //leave function
+    //restart incase it's already playing
+    audio.currentTime=0;
+    audio.play();
+    //grab key and format border
+    let el=document.querySelector(`.key[data-key="${e.keyCode}"]`);
+    el.classList.add('playing');
+  
+  };
+
+  const keys = document.querySelectorAll('.key')
+  keys.forEach(key =>{
+    key.addEventListener('transitionend', removeTransition)
+  })
+  function removeTransition(e){
+    //console.log(e);
+    if (e.propertyName != 'transform') return;
+    this.classList.remove('playing');
+  }
 </script>
 
 
